static/css/style.css
/* body */
body {
  max-width: 800px;
  margin: auto;
  padding: 1em;
  line-height: 1.4;
  font-size: 16px;
}

/* header and footer areas */
.menu, .article-meta, footer { text-align: center; }
.menu {padding: 0;}
.menu li { display: inline-block; }
.menu a { text-decoration: none; }
.article-meta, .menu a, blockquote, table {
  background: #f9f9f9;
  border: 1px solid #aaa;
  box-shadow: 2px 2px #ddd;
  padding: 5px;
  margin: 4px;
}
hr {
  border-style: 1px solid #aaa;
  max-width: calc(100% - 10px);
}

/* links */
a, footer a { color: royalblue; }
*:target { background-color: gold; }
a:hover{
  color: white;
  background-color: royalblue;
} 
sup {
  vertical-align: top;
  font-size: 0.8em;
  font-weight: 600;
}

/* code */
pre {
  border: 1px solid #aaa;
  box-shadow: 2px 2px #ddd;
  padding: 1em;
  margin: 4px;
  overflow-x: auto;
}
code { background: #ddd; }
pre code {
  background: none;
  font-size: 80%;
}

/* misc elements */
img, figure, iframe, video { max-width: 100%; }
main { hyphens: auto; }
blockquote {
  border-left: 4px solid #777;
  padding: 3px 1em;
}
ul {  list-style-type: disclosure-closed; }

/* figure and captions */
figure { 
  position: relative;
  margin: 0;
}
figure figcaption {
  color: black;
  text-align: right;
  padding: 10px;
  font-style: ;
  font-size: smaller;
  mix-blend-mode: hard-light;
  text-shadow: 1px 1px 3px white;
}

/* table */
table {
  margin: auto;
  border-left: 4px solid #777;
  background: #fff;
  max-width: calc(100% - 10px);
  border-collapse: collapse;
}
table thead th {
  border-bottom: 1px solid #777;
  vertical-align: middle;
}
th, td { padding: 5px; border: 1px dotted #777}
thead, tfoot, tr:nth-child(even) { background: #eee; }

/* For low resolution widths */
@media (max-width: 500px) { 
    .posts-list {
        white-space: nowrap;
        overflow-x: auto;
        font-size: 85%;
    }
}

